--- a/src/quiver.ipynb
+++ b/src/quiver.ipynb
@@ -25,6 +25,7 @@
    ],
    "source": [
     "# import the necessary package elements\n",
+    "import numpy as np\n",
     "from kie import KIE_Calculation"
    ]
   },
@@ -69,7 +70,7 @@
     }
    ],
    "source": [
-    "claisen_calculation = KIE_Calculation(\"../test/claisen_demo.config\", \"../test/claisen_gs.out\", \"../test/claisen_ts.out\", style=\"g09\", debug=False)"
+    "claisen_calculation = KIE_Calculation(\"../test/claisen_demo.config\", \"../test/claisen_gs.out\", \"../test/claisen_ts.out\", style=\"g09\")"
    ]
   },
   {
@@ -93,7 +94,7 @@
       "The claisen_calculation object:\n",
       "\n",
       "=== PY-QUIVER ANALYSIS ===\n",
-      "Isotopologue                                              uncorrected      Widmer     infinite parabola\n",
+      "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
       "                                                              KIE           KIE              KIE\n",
       "Isotopologue         C1                                      1.011         1.012            1.013      \n",
       "Isotopologue         C2                                      1.000         1.000            1.000      \n",
@@ -101,7 +102,7 @@
       "Isotopologue         C6                                      1.013         1.015            1.015      \n",
       "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
       "Isotopologue         O3                                      1.017         1.018            1.019      \n",
-      "KIEs referenced to isotopolouge C5:\n",
+      "KIEs referenced to isotopolouge C5. Absolute KIES are:\n",
       "Isotopologue         C5                                      1.002         1.002            1.002      \n"
      ]
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +238,7 @@
       "   Isotopologue         O3, replacement  1: replace gs atom  3  and ts atom  3  with 17O\n",
       "\n",
       "=== PY-QUIVER ANALYSIS ===\n",
-      "Isotopologue                                              uncorrected      Widmer     infinite parabola\n",
+      "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
       "                                                              KIE           KIE              KIE\n",
       "Isotopologue         C1                                      1.011         1.012            1.013      \n",
       "Isotopologue         C2                                      1.000         1.000            1.000      \n",
@@ -245,7 +246,7 @@
       "Isotopologue         C6                                      1.013         1.015            1.015      \n",
       "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
       "Isotopologue         O3                                      1.017         1.018            1.019      \n",
-      "KIEs referenced to isotopolouge C5:\n",
+      "KIEs referenced to isotopolouge C5. Absolute KIES are:\n",
       "Isotopologue         C5                                      1.002         1.002            1.002      \n"
      ]
     }
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<quiver.Isotopologue object at 0x7f44c89330d0>\n"
+      "<quiver.Isotopologue object at 0x7fc708084390>\n"
      ]
     }
    ],
@@ -288,8 +289,8 @@
     "# default masses in DEFAULT_MASSES are the average atomic weight of each element\n",
     "gs_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
     "\n",
-    "light_gs = Isotopologue(\"the light ground state\", gs, gs_masses)\n",
-    "print light_gs"
+    "gs_light = Isotopologue(\"the light ground state\", gs, gs_masses)\n",
+    "print gs_light"
    ]
   },
   {
@@ -302,9 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
     "# index 3 corresponds to atom 4\n",
     "sub_masses[3] = 5000.0\n",
     "\n",
-    "heavy_gs = Isotopologue(\"the super heavy ground state\", gs, sub_masses)"
+    "gs_heavy = Isotopologue(\"the super heavy ground state\", gs, sub_masses)"
    ]
   },
   {
@@ -322,12 +323,16 @@
    "source": [
     "### Calculating Reduced Isotopic Partition Function Ratio\n",
     "\n",
-    "Now that we access to two isotopomers, we can calculate the RPFR directly. To accomplish this we use the class method `calculate_rpfr` of the `KIE_Calculation` class. This method takes a tuple of the form `(light, heavy)`, a frequency threshold, a scaling factor, and a temperature. All of these are discussed in detail in the README."
+    "Now that we access to two isotopomers, we can calculate the RPFR directly. To accomplish this we use the function `calculate_rpfr` from the `kie` module. This function takes a tuple of the form `(light, heavy)`, a frequency threshold, a scaling factor, and a temperature. All of these are discussed in detail in the README.\n",
+    "\n",
+    "`calculate_rpfr` returns four values in a tuple: the first value is an ordered list of factors that product to the RPFR, the second value is a ratio of large imaginary frequencies (if present), the third value is the light frequencies, and the fourth value is the heavy frequencies.\n",
+    "\n",
+    "If we had wanted, we could have set `quiver.DEBUG = True` to print the individual contributions to the RPFR calculation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -336,24 +341,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<type 'type'>\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'KIE_Calculation' has no attribute 'calculate_rpfr'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-f8ebb29b9cd3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mKIE_Calculation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mKIE_Calculation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate_rpfr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlight_gs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheavy_gs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m273\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'KIE_Calculation' has no attribute 'calculate_rpfr'"
+      "11.2081236656\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "print type(KIE_Calculation)\n",
-    "KIE_Calculation.calculate_rpfr((light_gs, heavy_gs), 50.0, 1.0, 273)"
+    "from kie import calculate_rpfr\n",
+    "gs_rpfr, gs_imag_ratio, gs_light_freqs, gs_heavy_freqs = calculate_rpfr((gs_light, gs_heavy), 50.0, 1.0, 273)\n",
+    "print np.prod(gs_rpfr)\n",
+    "print gs_imag_ratio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating KIEs from Isotopologues\n",
+    "It's nice to be able to calculate RPFRs by hand, but there is also an object available to calculate KIEs automatically: the `KIE` class.\n",
+    "\n",
+    "We need to create a `KIE` object by passing it a pair of ground states (light and heavy) and a pair of transition states (light and heavy) as well as some temperature information.\n",
+    "\n",
+    "We will make the desired substitution at Carbon 4 in the transition state and use a `KIE` object to calculate the KIE."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isotopologue Carbon 5000 at C4 KIE                                      2.132         2.345            2.419      \n"
+     ]
+    }
+   ],
+   "source": [
+    "ts_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
+    "ts_light = Isotopologue(\"the light transition state\", ts, ts_masses)\n",
+    "ts_sub_masses = list(ts_masses)\n",
+    "ts_sub_masses[3] = 5000.0\n",
+    "ts_heavy = Isotopologue(\"the heavy transition state\", ts, ts_sub_masses)\n",
+    "\n",
+    "gs_tuple = (gs_light, gs_heavy)\n",
+    "ts_tuple = (ts_light, ts_heavy)\n",
+    "\n",
+    "from kie import KIE\n",
+    "# we make a KIE object using the gs and ts tuples from above for a calculation at 273 degrees K, with a scaling factor of 1.0, and a frequency threshold of 50 cm^-1\n",
+    "carbon5000_kie = KIE(\"Carbon 5000 at C4 KIE\", gs_tuple, ts_tuple, 273, 1.0, 50.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Displaying KIEs\n",
+    "Now, just like before, we have access to a KIE object (earlier we pulled them from the KIES dictionary). These can be printed prettily or you can take the value directly. As expected, we have large normal isotope effects because we used a Carbon-5000 nucleus!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isotopologue Carbon 5000 at C4 KIE                                      2.132         2.345            2.419      \n",
+      "[ 2.13240475  2.34485535  2.41923705]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print carbon5000_kie\n",
+    "print carbon5000_kie.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *PyQuiver* with multiple files: `autoquiver.py`\n",
+    "A common problem when computing KIEs is the need to screen a large number of levels of theory with numerous ground and transition state files. So far, we have only seen how to make a `KIE_Calculation` object that corresponds to a single configuration, ground state, and transition state.\n",
+    "\n",
+    "The `autoquiver` module implements functionality to perform screening over a large number of files."
    ]
   },
   {
