Added autoquiver documentation to python notebook.

--- a/src/quiver.ipynb
+++ b/src/quiver.ipynb
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<quiver.Isotopologue object at 0x7fc708084390>\n"
+      "<quiver.Isotopologue object at 0x7f8e797f43d0>\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -367,19 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Isotopologue Carbon 5000 at C4 KIE                                      2.132         2.345            2.419      \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ts_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
     "ts_light = Isotopologue(\"the light transition state\", ts, ts_masses)\n",
@@ -405,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +423,219 @@
     "## *PyQuiver* with multiple files: `autoquiver.py`\n",
     "A common problem when computing KIEs is the need to screen a large number of levels of theory with numerous ground and transition state files. So far, we have only seen how to make a `KIE_Calculation` object that corresponds to a single configuration, ground state, and transition state.\n",
     "\n",
-    "The `autoquiver` module implements functionality to perform screening over a large number of files."
+    "The `autoquiver` module implements functionality to perform screening over a large number of files. It's command line use is described in depth in the README. Here we will see how to leverage Python to have more sophisticated uses for `autoquiver`. Suppose we have the following files that we want to use as inputs to `PyQuiver`:\n",
+    "```\n",
+    "config.config\n",
+    "\n",
+    "ground_state1.out    ts-1.out\n",
+    "gs1rotomer.out       tsrotomer1.out\n",
+    "GROUNDSTATE2.out     transition_state2.out\n",
+    "gs3.out              ts3.out\n",
+    "```\n",
+    "We want to run *PyQuiver* on pair of files above in the same row using the configuration file `config.config`. The command line functionality of `autoquiver` is great when the file names have a consistent pattern, but here it's not obvious how to generate the proper pairings or detect which files are ground or transition states.\n",
+    "\n",
+    "Over the next few cells, we will see how to use Python to solve this problem. First let's see what arguments the `autoquiver` function takes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArgSpec(args=['filepath', 'config_path', 'gs_p', 'ts_p', 'gs_ts_match_p', 'input_extension', 'style'], varargs=None, keywords=None, defaults=('.snip', 'g09'))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "from autoquiver import autoquiver\n",
+    "inspect.getargspec(autoquiver)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The arguments\n",
+    "The function `autoquiver` (which is the only object available in the `autoquiver` module) requires the above arguments. Some of them are used intuitive and used the same between the command line interface and the Python face. Those are summarized below:\n",
+    "* `filepath`: this is the target directory.\n",
+    "* `config_path`: the location of the configuration file to use for all *PyQuiver* calculations\n",
+    "* `input_extension`: the file extension for ground and transition state files (DEFAULT=.out)\n",
+    "* `style`: the style of the ground and transition state files (DEFAULT=g09)\n",
+    "But the middle arguments are more exciting! In the README tutorial we discussed the command\n",
+    "```\n",
+    "python src/autoquiver.py -e .output auto/ auto/substitutions.config gs ts -\n",
+    "```\n",
+    "The strings \"gs\" and \"ts\" were used to find ground and transition files. A ground state file needed to have \"gs\" as a substring and likewise for \"gs\" and transition state files. The character \"-\" was used as a field delimiter and \"gs\" and \"ts\" matched if all fields after the first were identical.\n",
+    "\n",
+    "That is some sensible default behaviour, but the underlying interface is much more powerful. In general, we need the following three arguments\n",
+    "* `gs_p`: a function that takes a filename and returns a boolean value. `True` if the filename corresponds to a ground state and `False` if it does not.\n",
+    "* `ts_p`: a function that takes a filename and returns a boolean value. `True` if the filename corresponds to a transition state and `False` if it does not.\n",
+    "* `gs_ts_match_p`: a function that takes a ground state filename and a transition state filename and returns a boolean value. `True` if the ground state and transition state match and `Fase` if they do not.\n",
+    "\n",
+    "#### `gs_p` and `ts_p`\n",
+    "For the previous example, we need to detect that all of the following are ground state files:\n",
+    "```\n",
+    "ground_state1.out\n",
+    "gs1_rotomer.out\n",
+    "GROUNDSTATE2.out\n",
+    "gs3.out\n",
+    "```\n",
+    "We can accomplish this with the following Python function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def gs_p(filename):\n",
+    "    # convert to lowercase\n",
+    "    filename = filename.lower()\n",
+    "    # remove the _ character\n",
+    "    filename = filename.replace(\"_\", \"\")\n",
+    "    # replace groundstate with gs\n",
+    "    filename = filename.replace(\"groundstate\", \"gs\")\n",
+    "    # check if the modified filename begins with the string \"gs\"\n",
+    "    if filename[:2] == \"gs\":\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test this on all the filenames in the example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking ground state matches:\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Checking transition state matches:\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
+    "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
+    "\n",
+    "print \"Checking ground state matches:\"\n",
+    "for n in gs_filenames:\n",
+    "    print gs_p(n)\n",
+    "print \"Checking transition state matches:\"\n",
+    "for n in ts_filenames:\n",
+    "    print gs_p(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Low and behold - the function successfully separted ground state and transition state files. We can make a similar definition of `ts_p`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ts_p(filename):\n",
+    "    # convert to lowercase\n",
+    "    filename = filename.lower()\n",
+    "    # remove the _ character\n",
+    "    filename = filename.replace(\"_\", \"\")\n",
+    "    # replace groundstate with gs\n",
+    "    filename = filename.replace(\"transitionstate\", \"ts\")\n",
+    "    # check if the modified filename begins with the string \"gs\"\n",
+    "    if filename[:2] == \"ts\":\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `gs_ts_match_p`\n",
+    "Now all we have to do is write a function `gs_ts_match_p` that can take two filenames (one ground state and one transition state) and detect if they are matches. There are numerous ways to accomplish this. We will use a basic regular expression to highlight a common method for writing these functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'multiply' did not contain a loop with signature matching types dtype('S21') dtype('S21') dtype('S21')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-65e901efca4f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mgs_n\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mts_n\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeshgrid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgs_filenames\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mts_filenames\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mgs_n\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mts_n\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/thayer/anaconda2/lib/python2.7/site-packages/numpy/lib/function_base.pyc\u001b[0m in \u001b[0;36mmeshgrid\u001b[1;34m(*xi, **kwargs)\u001b[0m\n\u001b[0;32m   4103\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcopy_\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4104\u001b[0m             \u001b[0mmult_fact\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4105\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mmult_fact\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4106\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4107\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbroadcast_arrays\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: ufunc 'multiply' did not contain a loop with signature matching types dtype('S21') dtype('S21') dtype('S21')"
+     ]
+    }
+   ],
+   "source": [
+    "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
+    "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
+    "\n",
+    "import re\n",
+    "def gs_ts_p(gs_name, ts_name):\n",
+    "    # a regular expression that finds and extracts the first integer substring in a filename\n",
+    "    gs_match  = re.search(\".*([0-9]+).*\", gs_name)\n",
+    "    gs_number = gs_match.group(1)\n",
+    "    \n",
+    "    ts_match  = re.search(\".*([0-9]+).*\", ts_name)\n",
+    "    ts_number = ts_match.group(1)\n",
+    "    \n",
+    "    if ts_number == gs_number:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "for gs_n, ts_n in np.meshgrid(gs_filenames, ts_filenames):\n",
+    "    print gs_n\n",
+    "    print ts_n"
    ]
   },
   {
