working on documentation

--- a/src/quiver.ipynb
+++ b/src/quiver.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *PyQuiver* Notebook\n",
+    "# *PyQuiver*\n",
     "This is an IPython Notebook interface for the *PyQuiver* package. The code below will guide you through using *PyQuiver* through a native Python interface. The same steps could be reproduced in the Python interpreter or in a `.py` file."
    ]
   },
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A simple calculation\n",
+    "## A Simple Calculation\n",
     "\n",
-    "To perform a simple calculation, we can naively reproduce the command-line interface. We simply create a KIE_Calculation object as follows:"
+    "We can reproduce the command-line interface by creating a KIE_Calculation object:"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now the KIEs can be printed in a nice format by simply using the `print` command:"
+    "To print the KIEs:"
    ]
   },
   {
@@ -93,7 +93,7 @@
      "text": [
       "The claisen_calculation object:\n",
       "\n",
-      "=== PY-QUIVER ANALYSIS ===\n",
+      "=== PyQuiver Analysis ===\n",
       "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
       "                                                              KIE           KIE              KIE\n",
       "Isotopologue         C1                                      1.011         1.012            1.013      \n",
@@ -102,7 +102,8 @@
       "Isotopologue         C6                                      1.013         1.015            1.015      \n",
       "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
       "Isotopologue         O3                                      1.017         1.018            1.019      \n",
-      "KIEs referenced to isotopolouge C5. Absolute KIES are:\n",
+      "\n",
+      "KIEs referenced to isotopologue C5. Absolute KIEs are:\n",
       "Isotopologue         C5                                      1.002         1.002            1.002      \n"
      ]
     }
@@ -116,8 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Or we can pull the KIEs directly from the object:\n",
-    "Even this simple example highlights the power of working with the Python interface. We have access to the raw `KIE` objects and can readily pull their values from the `KIE` dictionary belonging to our `KIE_Calculation`. This power could help us automate the process of calculating KIEs over a huge number of files. In fact, this functionality has been implemented in the `autoquiver` routine. See the later section."
+    "We can also access the KIEs directly via the `KIE` dictionary belonging to our `KIE_Calculation`.  This can be useful for automating KIE analyses over a large number of files. This functionality is further developed in the `autoquiver` routine (see below)."
    ]
   },
   {
@@ -237,7 +237,7 @@
       "   Isotopologue        H/D, replacement  2: replace gs atom  8  and ts atom  8  with  2D\n",
       "   Isotopologue         O3, replacement  1: replace gs atom  3  and ts atom  3  with 17O\n",
       "\n",
-      "=== PY-QUIVER ANALYSIS ===\n",
+      "=== PyQuiver Analysis ===\n",
       "Isotopologue                                              uncorrected      Wigner     infinite parabola\n",
       "                                                              KIE           KIE              KIE\n",
       "Isotopologue         C1                                      1.011         1.012            1.013      \n",
@@ -246,7 +246,8 @@
       "Isotopologue         C6                                      1.013         1.015            1.015      \n",
       "Isotopologue        H/D                                      0.953         0.954            0.955      \n",
       "Isotopologue         O3                                      1.017         1.018            1.019      \n",
-      "KIEs referenced to isotopolouge C5. Absolute KIES are:\n",
+      "\n",
+      "KIEs referenced to isotopologue C5. Absolute KIEs are:\n",
       "Isotopologue         C5                                      1.002         1.002            1.002      \n"
      ]
     }
@@ -277,7 +278,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<quiver.Isotopologue object at 0x7f8e797f43d0>\n"
+      "Isotopologue: the light ground state\n",
+      " masses: [12.0, 12.0, 15.9949146, 12.0, 12.0, 12.0, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825]\n"
      ]
     }
    ],
@@ -298,7 +300,7 @@
    "metadata": {},
    "source": [
     "### `Isotopologue`s with substitutions\n",
-    "Now that we know how to make `Isotopologue`s it's very easy to specify isotopic substitutions from default masses. Let's put a Carbon-5000 (a very rare nucleus ...) at atom 4:"
+    "Now that we know how to make `Isotopologue`s it's very easy to specify isotopic substitutions. Let's put the mysterious isotope carbon-5000 at atom 4:"
    ]
   },
   {
@@ -311,7 +313,7 @@
    "source": [
     "# make a copy of gs_masses\n",
     "sub_masses = list(gs_masses)\n",
-    "# index 3 corresponds to atom 4\n",
+    "# index 3 corresponds to atom number 4\n",
     "sub_masses[3] = 5000.0\n",
     "\n",
     "gs_heavy = Isotopologue(\"the super heavy ground state\", gs, sub_masses)"
@@ -321,13 +323,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculating Reduced Isotopic Partition Function Ratio\n",
+    "### Calculating Reduced Isotopic Partition Function Ratios\n",
     "\n",
-    "Now that we access to two isotopomers, we can calculate the RPFR directly. To accomplish this we use the function `calculate_rpfr` from the `kie` module. This function takes a tuple of the form `(light, heavy)`, a frequency threshold, a scaling factor, and a temperature. All of these are discussed in detail in the README.\n",
+    "KIEs are essentially ratios of reduced isotopic partition functions (RPFRs).  To calculate these, we use the function `calculate_rpfr` from the `kie` module. This function takes a tuple of the form `(light, heavy)`, a frequency threshold, a scaling factor, and a temperature. (All of these are discussed in detail in the README.)\n",
     "\n",
-    "`calculate_rpfr` returns four values in a tuple: the first value is an ordered list of factors that product to the RPFR, the second value is a ratio of large imaginary frequencies (if present), the third value is the light frequencies, and the fourth value is the heavy frequencies.\n",
+    "`calculate_rpfr` returns four values in a tuple: the first value is the RPFR, the second value is a ratio of large imaginary frequencies (if present), the third value is the frequencies in the light isotopomer, and the fourth value is the frequencies in the heavy isotopomer.\n",
     "\n",
-    "If we had wanted, we could have set `quiver.DEBUG = True` to print the individual contributions to the RPFR calculation."
+    "To print the individual contributions to the RPFR, set `quiver.DEBUG = True` in `quiver.py` and restart the kernel. "
    ]
   },
   {
@@ -342,15 +344,22 @@
      "output_type": "stream",
      "text": [
       "11.2081236656\n",
-      "None\n"
+      "[   61.631434     131.33940975   149.25478244   235.05384691   253.61000919\n",
+      "   388.68321807   538.23713827   573.1098416    689.54514791   693.15891096\n",
+      "   713.75792653   824.87106694   863.15186782   950.01325243  1000.01764911\n",
+      "  1000.40305289  1034.40340406  1075.63192671  1229.08835092  1266.54977859\n",
+      "  1298.58236833  1332.35577789  1376.57176191  1456.12070386  1466.42176654\n",
+      "  1501.64974966  1712.50915119  1738.46586076  2871.66940343  2922.94354739\n",
+      "  3159.73242676  3181.30165023  3195.17469476  3209.76123403  3263.87810693\n",
+      "  3278.47225297]\n"
      ]
     }
    ],
    "source": [
     "from kie import calculate_rpfr\n",
     "gs_rpfr, gs_imag_ratio, gs_light_freqs, gs_heavy_freqs = calculate_rpfr((gs_light, gs_heavy), 50.0, 1.0, 273)\n",
-    "print np.prod(gs_rpfr)\n",
-    "print gs_imag_ratio"
+    "print gs_rpfr\n",
+    "print gs_light_freqs"
    ]
   },
   {
@@ -367,22 +376,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isotopologue: the light transition state\n",
+      " masses: [12.0, 12.0, 15.9949146, 12.0, 12.0, 12.0, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825]\n",
+      "\n",
+      "Isotopologue: the heavy transition state\n",
+      " masses: [12.0, 12.0, 15.9949146, 5000.0, 12.0, 12.0, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825, 1.007825]\n"
+     ]
+    }
+   ],
    "source": [
     "ts_masses = [DEFAULT_MASSES[z] for z in gs.atomic_numbers]\n",
     "ts_light = Isotopologue(\"the light transition state\", ts, ts_masses)\n",
+    "print ts_light\n",
+    "print\n",
     "ts_sub_masses = list(ts_masses)\n",
     "ts_sub_masses[3] = 5000.0\n",
     "ts_heavy = Isotopologue(\"the heavy transition state\", ts, ts_sub_masses)\n",
+    "print ts_heavy\n",
     "\n",
     "gs_tuple = (gs_light, gs_heavy)\n",
     "ts_tuple = (ts_light, ts_heavy)\n",
     "\n",
     "from kie import KIE\n",
+    "\n",
     "# we make a KIE object using the gs and ts tuples from above for a calculation at 273 degrees K, with a scaling factor of 1.0, and a frequency threshold of 50 cm^-1\n",
     "carbon5000_kie = KIE(\"Carbon 5000 at C4 KIE\", gs_tuple, ts_tuple, 273, 1.0, 50.0)"
    ]
@@ -392,12 +417,12 @@
    "metadata": {},
    "source": [
     "### Displaying KIEs\n",
-    "Now, just like before, we have access to a KIE object (earlier we pulled them from the KIES dictionary). These can be printed prettily or you can take the value directly. As expected, we have large normal isotope effects because we used a Carbon-5000 nucleus!"
+    "Now, just like before, we have access to a KIE object (earlier we pulled them from the KIES dictionary). These can be printed prettily or you can take the value directly. As expected, we have large normal isotope effects because we used a carbon-5000 nucleus!  (The three numbers correspond to the uncorrected, Wigner, and Bell KIEs.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +448,8 @@
     "## *PyQuiver* with multiple files: `autoquiver.py`\n",
     "A common problem when computing KIEs is the need to screen a large number of levels of theory with numerous ground and transition state files. So far, we have only seen how to make a `KIE_Calculation` object that corresponds to a single configuration, ground state, and transition state.\n",
     "\n",
-    "The `autoquiver` module implements functionality to perform screening over a large number of files. It's command line use is described in depth in the README. Here we will see how to leverage Python to have more sophisticated uses for `autoquiver`. Suppose we have the following files that we want to use as inputs to `PyQuiver`:\n",
+    "The `autoquiver` module implements functionality to perform screening over a large number of files. Its command line use is described in depth in the README. Here we will see how to leverage Python to have more sophisticated uses for `autoquiver`. Suppose we have the following files that we want to use as inputs to `PyQuiver`:\n",
+    "\n",
     "```\n",
     "config.config\n",
     "\n",
@@ -432,6 +458,7 @@
     "GROUNDSTATE2.out     transition_state2.out\n",
     "gs3.out              ts3.out\n",
     "```\n",
+    "\n",
     "We want to run *PyQuiver* on pair of files above in the same row using the configuration file `config.config`. The command line functionality of `autoquiver` is great when the file names have a consistent pattern, but here it's not obvious how to generate the proper pairings or detect which files are ground or transition states.\n",
     "\n",
     "Over the next few cells, we will see how to use Python to solve this problem. First let's see what arguments the `autoquiver` function takes."
@@ -439,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -447,10 +474,10 @@
     {
      "data": {
       "text/plain": [
-       "ArgSpec(args=['filepath', 'config_path', 'gs_p', 'ts_p', 'gs_ts_match_p', 'input_extension', 'style'], varargs=None, keywords=None, defaults=('.snip', 'g09'))"
+       "ArgSpec(args=['filepath', 'config_path', 'gs_p', 'ts_p', 'gs_ts_match_p', 'input_extension', 'style'], varargs=None, keywords=None, defaults=('.out', 'g09'))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -524,28 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking ground state matches:\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "Checking transition state matches:\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
     "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
@@ -567,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -597,24 +607,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Match: ground_state1.out ts-1.out\n",
-      "Match: ground_state1.out tsrotomer1.out\n",
-      "Match: gs1_rotomer.out ts-1.out\n",
-      "Match: gs1_rotomer.out tsrotomer1.out\n",
-      "Match: GROUNDSTATE2.out transition_state2.out\n",
-      "Match: gs3.out ts3.out\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
     "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
@@ -651,9 +648,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -665,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.8"
   }
  },
  "nbformat": 4,
