--- a/src/quiver.ipynb
+++ b/src/quiver.ipynb
@@ -459,70 +459,51 @@
     "gs3.out              ts3.out\n",
     "```\n",
     "\n",
-    "We want to run *PyQuiver* on pair of files above in the same row using the configuration file `config.config`. The command line functionality of `autoquiver` is great when the file names have a consistent pattern, but here it's not obvious how to generate the proper pairings or detect which files are ground or transition states.\n",
-    "\n",
-    "Over the next few cells, we will see how to use Python to solve this problem. First let's see what arguments the `autoquiver` function takes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ArgSpec(args=['filepath', 'config_path', 'gs_p', 'ts_p', 'gs_ts_match_p', 'input_extension', 'style'], varargs=None, keywords=None, defaults=('.out', 'g09'))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import inspect\n",
-    "from autoquiver import autoquiver\n",
-    "inspect.getargspec(autoquiver)"
+    "We want to run *PyQuiver* on pair of files above in the same row using the configuration file `config.config`. The command line functionality of `autoquiver` is great when the file names have a consistent pattern, but here it's not obvious how to generate the proper pairings or detect which files are ground or transition states."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The arguments\n",
-    "The function `autoquiver` (which is the only object available in the `autoquiver` module) requires the above arguments. Some of them are used intuitive and used the same between the command line interface and the Python face. Those are summarized below:\n",
+    "### The Arguments\n",
+    "The function `autoquiver` (which is the only object available in the `autoquiver` module) requires the following arguments:\n",
+    "\n",
     "* `filepath`: this is the target directory.\n",
     "* `config_path`: the location of the configuration file to use for all *PyQuiver* calculations\n",
-    "* `input_extension`: the file extension for ground and transition state files (DEFAULT=.out)\n",
-    "* `style`: the style of the ground and transition state files (DEFAULT=g09)\n",
-    "But the middle arguments are more exciting! In the README tutorial we discussed the command\n",
+    "* `input_extension`: the file extension for ground and transition state files (default=`.out`)\n",
+    "* `style`: the style of the ground and transition state files (default=`g09`)\n",
+    "\n",
+    "In the README, we discussed the command:\n",
+    "\n",
     "```\n",
     "python src/autoquiver.py -e .output auto/ auto/substitutions.config gs ts -\n",
     "```\n",
+    "\n",
     "The strings \"gs\" and \"ts\" were used to find ground and transition files. A ground state file needed to have \"gs\" as a substring and likewise for \"gs\" and transition state files. The character \"-\" was used as a field delimiter and \"gs\" and \"ts\" matched if all fields after the first were identical.\n",
     "\n",
-    "That is some sensible default behaviour, but the underlying interface is much more powerful. In general, we need the following three arguments\n",
+    "That is some sensible default behaviour, but for more complex cases, we can provide the following functions:\n",
+    "\n",
     "* `gs_p`: a function that takes a filename and returns a boolean value. `True` if the filename corresponds to a ground state and `False` if it does not.\n",
     "* `ts_p`: a function that takes a filename and returns a boolean value. `True` if the filename corresponds to a transition state and `False` if it does not.\n",
     "* `gs_ts_match_p`: a function that takes a ground state filename and a transition state filename and returns a boolean value. `True` if the ground state and transition state match and `Fase` if they do not.\n",
     "\n",
     "#### `gs_p` and `ts_p`\n",
     "For the previous example, we need to detect that all of the following are ground state files:\n",
+    "\n",
     "```\n",
     "ground_state1.out\n",
     "gs1_rotomer.out\n",
     "GROUNDSTATE2.out\n",
     "gs3.out\n",
     "```\n",
+    "\n",
     "We can accomplish this with the following Python function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -551,11 +532,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking ground state matches:\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Checking transition state matches:\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
     "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
@@ -572,12 +570,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Low and behold - the function successfully separted ground state and transition state files. We can make a similar definition of `ts_p`:"
+    "Lo and behold! The function successfully separated the ground state and transition state files. We can similarly implement `ts_p`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -607,11 +605,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match: ground_state1.out ts-1.out\n",
+      "Match: ground_state1.out tsrotomer1.out\n",
+      "Match: gs1_rotomer.out ts-1.out\n",
+      "Match: gs1_rotomer.out tsrotomer1.out\n",
+      "Match: GROUNDSTATE2.out transition_state2.out\n",
+      "Match: gs3.out ts3.out\n"
+     ]
+    }
+   ],
    "source": [
     "gs_filenames = [\"ground_state1.out\", \"gs1_rotomer.out\", \"GROUNDSTATE2.out\", \"gs3.out\"]\n",
     "ts_filenames = [\"ts-1.out\", \"tsrotomer1.out\", \"transition_state2.out\", \"ts3.out\"]\n",
@@ -643,7 +654,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# missing example of how to actually use autoquiver"
+   ]
   }
  ],
  "metadata": {
